--- a/TVApp/TVApp/Base.lproj/Main.storyboard
+++ b/TVApp/TVApp/Base.lproj/Main.storyboard
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--kakaoTV-->
+        <!--Title-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="TVCollectionViewController" customModule="TVApp" customModuleProvider="target" sceneMemberID="viewController">
@@ -17,11 +17,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="UYS-6b-7h3">
-                                <rect key="frame" x="0.0" y="189" width="375" height="673"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="UYS-6b-7h3">
+                                <rect key="frame" x="0.0" y="189" width="375" height="589"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="2us-6s-66P">
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="2us-6s-66P">
                                     <size key="itemSize" width="336" height="291"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
@@ -33,7 +32,7 @@
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="1Am-Ex-3fp">
                                             <rect key="frame" x="0.0" y="0.0" width="336" height="291"/>
-                                            <autoresizingMask key="autoresizingMask"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
                                         </collectionViewCellContentView>
                                         <size key="customSize" width="336" height="291"/>
                                     </collectionViewCell>
@@ -44,9 +43,18 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
                             </button>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="66U-6Q-hY8">
-                                <rect key="frame" x="0.0" y="92" width="414" height="51"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="jgu-rY-ZzZ">
+                                <rect key="frame" x="122" y="151" width="131" height="32"/>
+                                <segments>
+                                    <segment title="오리지날"/>
+                                    <segment title="라이브"/>
+                                </segments>
+                                <connections>
+                                    <action selector="segmentControlChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="SXC-T6-JeH"/>
+                                </connections>
+                            </segmentedControl>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="66U-6Q-hY8">
+                                <rect key="frame" x="0.0" y="88" width="375" height="51"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Hw6-Jd-fSH">
                                         <rect key="frame" x="38" y="8" width="298" height="34"/>
@@ -57,61 +65,35 @@
                                     </textField>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemGray6Color"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="51" id="tyZ-0H-hGB"/>
+                                </constraints>
                             </view>
-                            <segmentedControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="jgu-rY-ZzZ">
-                                <rect key="frame" x="122" y="151" width="131" height="32"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <segments>
-                                    <segment title="오리지날"/>
-                                    <segment title="라이브"/>
-                                </segments>
-                            </segmentedControl>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="jgu-rY-ZzZ" firstAttribute="top" secondItem="66U-6Q-hY8" secondAttribute="bottom" constant="12" id="0t5-Nb-wNF"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="UYS-6b-7h3" secondAttribute="bottom" id="Jwq-iH-65K"/>
+                            <constraint firstItem="jgu-rY-ZzZ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="122" id="LeQ-Cv-YXj"/>
+                            <constraint firstItem="66U-6Q-hY8" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Pcf-US-qaO"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="jgu-rY-ZzZ" secondAttribute="trailing" constant="122" id="QAn-k8-PZ8"/>
+                            <constraint firstItem="66U-6Q-hY8" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="c1S-c2-wUU"/>
+                            <constraint firstItem="UYS-6b-7h3" firstAttribute="top" secondItem="jgu-rY-ZzZ" secondAttribute="bottom" constant="7" id="gLQ-Gd-vTN"/>
+                            <constraint firstItem="66U-6Q-hY8" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="gYL-Bq-4Kr"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="UYS-6b-7h3" secondAttribute="trailing" id="kTA-6w-shb"/>
+                            <constraint firstItem="UYS-6b-7h3" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="n8t-lK-iiT"/>
+                        </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="kakaoTV" id="eVc-4b-deo"/>
+                    <navigationItem key="navigationItem" title="Title" id="NgV-ND-qhp"/>
                     <connections>
                         <outlet property="TVCollectionView" destination="UYS-6b-7h3" id="sV0-a6-gtn"/>
+                        <outlet property="segmentControl" destination="jgu-rY-ZzZ" id="nuA-hU-avV"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1047.2" y="93.103448275862078"/>
-        </scene>
-        <!--Collection View Controller-->
-        <scene sceneID="b2a-37-vhT">
-            <objects>
-                <collectionViewController id="x2i-uV-17j" customClass="TVCollectionViewController" customModule="TVApp" customModuleProvider="target" sceneMemberID="viewController">
-                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="9sb-y7-cgK">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="MFL-r9-QQH">
-                            <size key="itemSize" width="128" height="128"/>
-                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                        </collectionViewFlowLayout>
-                        <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="TVCell" id="qUE-Dh-qUS">
-                                <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="xPE-fO-OSX">
-                                    <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </collectionViewCellContentView>
-                            </collectionViewCell>
-                        </cells>
-                        <connections>
-                            <outlet property="dataSource" destination="x2i-uV-17j" id="71e-I9-gJV"/>
-                            <outlet property="delegate" destination="x2i-uV-17j" id="FN1-eO-DJT"/>
-                        </connections>
-                    </collectionView>
-                </collectionViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="evY-VB-UZt" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1995" y="89"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Sfz-hv-AGn">
